fix: update API URL and CORS options for production environment

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=http://localhost:5000
+VITE_API_URL=https://apsblog.onrender.com/
 VITE_IMG_URL=https://res.cloudinary.com/djhhijldt/image/upload/v1755260548/tl9d1yx0ibet06xdvget.jpg
 
